# gtbo

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  singularity_container
.github/workflows/: docs.yml  pytest.yml
configs/: default.gin  singularity.gin
gtbo/: benchmarks.py  candidates.py  gaussian_process.py  gtbo.py  priors.py  test_gtbo.py  util.py
gtbo/group_testing/: bayes.py  ground_truth_evaluator.py  state.py  test_tester.py  tester.py  utils.py
gtbo/group_testing/samplers/: __init__.py  kernels.py  sampler.py  sequential_monte_carlo.py  temperature.py
